# app/backend/src/controllers/tasks/implementation/get-project-tasks.impl.ts
@@ -1,0 +1,7 @@
+import { Task } from "models/task.model";
+
+const getProjectTasks = async (projectId: string): Promise<any> => {
+  const tasks: any = await Task.find({ project: projectId });
+  return tasks;
+};
+export default getProjectTasks;
